Litt for mye fiksing
Gått til kramdown
Laget tags, categories, archive
Lagt inn previous og next

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,6 +33,16 @@
   </nav>
 
   <div class="sidebar-item">
+  <p>
+      Completely clean from tracking and ads.
+    </p>
+    <p class="social-icons">
+      <a href="https://github.com/erikwez"><i class="fa fa-github fa-2x"></i></a>
+      <!-- <a href="https://bitbucket.org/lanyonm"><i class="fa fa-bitbucket fa-2x"></i></a> -->
+      <a href="https://twitter.com/erikwb"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/erikwb"><i class="fa fa-linkedin fa-2x"></i></a>
+      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+    </p>
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
