--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,29 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
+  {% if page.categories %}
+    <div class="post-categories">Categories: {{ page.categories' }}</div>
+  {% endif %}
   {{ content }}
 </div>
+
+    {% comment %}
+      Pagination knabbet fra Jekyll-Bootstrap.
+    {% endcomment %}
+    <hr>
+    <ul class="pagination">
+    {% if page.previous %}
+      <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&laquo; Previous</a></li>
+    {% else %}
+      <li class="prev disabled"><a>&larr; Previous</a></li>
+    {% endif %}
+    {% if page.next %}
+      <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &raquo;</a></li>
+    {% else %}
+      <li class="next disabled"><a>Next &rarr;</a>
+    {% endif %}
+    </ul>
+    <hr>
 
 <div class="related">
   <h2>Related Posts</h2>
