--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,8 @@
         {% endif %}
       {% endif %}
     {% endfor %}
+  <a class="sidebar-nav-item{% if page.url == site.baseurl/Search %} active{% endif %}" href="{{ site.baseurl }}/search/">Search</a>
+   <!--  <a class="sidebar-nav-item active" href="/search">Search</a> -->
 
 <!--
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
@@ -34,7 +36,7 @@
 
   <div class="sidebar-item">
   <p>
-      Completely clean from tracking and ads.
+      Completely clean from tracking, ads, cookies and storage.
     </p>
     <p class="social-icons">
       <a href="https://github.com/erikwez"><i class="fa fa-github fa-2x"></i></a>
