--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,9 +35,11 @@
   </nav>
 
   <div class="sidebar-item">
-  <p>
-      Completely clean from tracking, ads, cookies and storage.
-    </p>
+  <ul>
+      <li> No Cookies!</li>
+      <li> No Tracking!</li>
+      <li> No Ads!</li>
+    </ul>
     <p class="social-icons">
       <a href="https://github.com/erikwez"><i class="fa fa-github fa-2x"></i></a>
       <!-- <a href="https://bitbucket.org/lanyonm"><i class="fa fa-bitbucket fa-2x"></i></a> -->
