--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -6,8 +6,17 @@ search_omit: true
 <h1 class="category">{{ page.title }}</h1>
 <ul class="posts">
 {% for post in site.categories[page.category] %}
-    <div>{{ post.date | date_to_html_string }}</div>
+<div class="category-list">
+    <div class="category-date">>{{ post.date | date_to_html_string }}</div>
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+<!--
     <div class="categories">Filed under {{ post.categories | category_links }}</div>
+ -->
+</div>
 {% endfor %}
 </ul>
+<hr>
+<p><i class="fa fa-arrow-right"></i> <a href="/categories.html">Back to categories</a></p>
+
+
+
