--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,27 +25,17 @@
       {% endif %}
     {% endfor %}
   <a class="sidebar-nav-item{% if page.url == site.baseurl/Search %} active{% endif %}" href="{{ site.baseurl }}/search/">Search</a>
-   <!--  <a class="sidebar-nav-item active" href="/search">Search</a> -->
-
-<!--
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
- -->
   </nav>
 
   <div class="sidebar-item">
-  <ul>
-      <li> No Cookies!</li>
-      <li> No Tracking!</li>
-      <li> No Ads!</li>
-    </ul>
+
+<p>Hi. I'm Erik. This is a dumping place for whatever I would want to write. </p>
+
     <p class="social-icons">
-      <a href="https://github.com/erikwez"><i class="fa fa-github fa-2x"></i></a>
-      <!-- <a href="https://bitbucket.org/lanyonm"><i class="fa fa-bitbucket fa-2x"></i></a> -->
+      <!-- <a href="https://github.com/erikwez"><i class="fa fa-github fa-2x"></i></a> -->
       <a href="https://twitter.com/erikwb"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="https://www.linkedin.com/in/erikwb"><i class="fa fa-linkedin fa-2x"></i></a>
-      <a href="/feed.xml"><i class="fa fa-rss fa-2x"></i></a>
+      <a href="https://www.flickr.com/photos/erikwb"><i class="fa fa-flickr fa-2x"></i></a>
+      <a href="/atom.xml"><i class="fa fa-rss fa-2x"></i></a>
     </p>
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
