--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -41,11 +41,11 @@ body {
 }
 
 html {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "PT Serif", Georgia, "Times New Roman", serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Oswald", Helvetica, Arial, sans-serif;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: #313131;
   letter-spacing: -.025rem;
@@ -317,7 +317,6 @@ a.sidebar-nav-item:focus {
 .post-title,
 .post-title a {
   color: #303030;
-  font-family: Oswald, serif;
 }
 .page-title,
 .post-title {
@@ -329,15 +328,6 @@ a.sidebar-nav-item:focus {
   display: block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
-  color: #9a9a9a;
-}
-
-.post-categories {
-  display: block;
-  margin-top: -.5rem;
-  margin-bottom: 1rem;
-  font-size: small;
-  font-style: italic;
   color: #9a9a9a;
 }
 
@@ -443,53 +433,6 @@ a.pagination-item:hover {
           transform: translateX(-14rem);
 }
 
-
-/*****************************************************************************/
-/*
-/* Tags
-/*
-/*****************************************************************************/
-
-.tag-box {
-  list-style: none;
-  margin: 0;
-  padding: 4px 0;
-  overflow: hidden;
-  *zoom: 1;
-}
-
-.tag-box:before, .tag-box:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-
-.tag-box:after {
-  clear: both;
-}
-
-.tag-box.inline li {
-  float: left;
-  font-size: 14px;
-  font-size: 0.875rem;
-  line-height: 2.5;
-}
-
-.tag-box a {
-  padding: 4px 6px;
-  margin: 2px;
-  background-color: #e6e6e6;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  text-decoration: none;
-}
-
-.tag-box a span {
-  vertical-align: super;
-  font-size: 10px;
-  font-size: 0.625rem;
-}
 
 /*
  * Themes
@@ -617,54 +560,4 @@ a.pagination-item:hover {
 /* Only one tweak for a reverse layout */
 .layout-reverse.sidebar-overlay #sidebar-checkbox:checked ~ .sidebar {
   box-shadow: -.25rem 0 .5rem rgba(0,0,0,.1);
-}
-
-
-/********************************************************/
-/*                   PAGINATION                         */
-/*             From Jekyll-Bootstrap                    */
-/********************************************************/
-
-.pagination{display:inline-block;padding-left:0;margin:20px 0;border-radius:4px}
-
-.pagination>li{display:inline}
-
-.pagination>li>a,.pagination>li>span{position:relative;float:left;padding:6px 12px;margin-left:-1px;line-height:1.428571429;text-decoration:none;background-color:#fff;border:1px solid #ddd}
-
-.pagination>li:first-child>a,.pagination>li:first-child>span{margin-left:0;border-bottom-left-radius:4px;border-top-left-radius:4px}
-
-.pagination>li:last-child>a,.pagination>li:last-child>span{border-top-right-radius:4px;border-bottom-right-radius:4px}
-
-.pagination>li>a:hover,.pagination>li>span:hover,.pagination>li>a:focus,.pagination>li>span:focus{background-color:#eee}
-
-.pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus{z-index:2;color:#fff;cursor:default;background-color:#428bca;border-color:#428bca}
-
-.pagination>.disabled>span,.pagination>.disabled>span:hover,.pagination>.disabled>span:focus,.pagination>.disabled>a,.pagination>.disabled>a:hover,.pagination>.disabled>a:focus{color:#999;cursor:not-allowed;background-color:#fff;border-color:#ddd}
-
-.pagination-lg>li>a,.pagination-lg>li>span{padding:10px 16px;font-size:18px}
-
-.pagination-lg>li:first-child>a,.pagination-lg>li:first-child>span{border-bottom-left-radius:6px;border-top-left-radius:6px}
-
-.pagination-lg>li:last-child>a,.pagination-lg>li:last-child>span{border-top-right-radius:6px;border-bottom-right-radius:6px}
-
-.pagination-sm>li>a,.pagination-sm>li>span{padding:5px 10px;font-size:12px}
-
-.pagination-sm>li:first-child>a,.pagination-sm>li:first-child>span{border-bottom-left-radius:3px;border-top-left-radius:3px}
-
-.pagination-sm>li:last-child>a,.pagination-sm>li:last-child>span{
-	border-top-right-radius:3px;
-	border-bottom-right-radius:3px
-	}
-
-/********************************************************/
-/*                   CATEGORY                        */
-/*             Category listing page                    */
-/********************************************************/
-
-.category-list {
-  padding-top: 2em;
-}
-
-.category-date {
-line-height: 3px;
 }
