Endret visning av kategori og tag i posts.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,13 +29,15 @@
 
   <div class="sidebar-item">
 
-<p>Hi. I'm Erik. This is a dumping place for whatever I would want to write. </p>
+<p>Hi. I'm Erik.<br />This is a dumping place for whatever escapes my brain. </p>
 
     <p class="social-icons">
       <!-- <a href="https://github.com/erikwez"><i class="fa fa-github fa-2x"></i></a> -->
-      <a href="https://twitter.com/erikwb"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://twitter.com/erikwb"><i class="fa fa-twitter-square fa-2x"></i></a>
       <a href="https://www.flickr.com/photos/erikwb"><i class="fa fa-flickr fa-2x"></i></a>
-      <a href="/atom.xml"><i class="fa fa-rss fa-2x"></i></a>
+      <a href="https://instagram.com/erikwb/"><i class="fa fa-instagram fa-2x"></i></a>
+      <a href="https://vimeo.com/erikwb"><i class="fa fa-vimeo-square fa-2x"></i></a>
+      <a href="/atom.xml"><i class="fa fa-rss-square fa-2x"></i></a>
     </p>
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
