--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,13 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date"><i class="fa fa-calendar"></i> {{ page.date | date_to_string }}</span>
   {% if page.categories %}
-    <div class="post-categories">Categories: {{ page.categories' }}</div>
+    <div class="post-categories">Posted in: <a href="/categories/{{ page.categories' }}">{{ page.categories' }}</a> &nbsp; &nbsp; <i class="fa fa-tags fa-lg"></i> {% for tag in page.tags %}<a href="/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %} &bull; {% endunless %}{% endfor %}</div>
   {% endif %}
 
       {% comment %}
-      Tags-visning knabbet fra Michael Lanyon. https://github.com/lanyonm/lanyonm.github.io
-    {% endcomment %}
-   <p class="entry-tags"><i class="fa fa-tags"></i> {% for tag in page.tags %}<a href="{{ site.url }}/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %} &bull; {% endunless %}{% endfor %}</p>
-
+      Tags-visning knabbet fra Michael Lanyon. https://github.com/lanyonm/lanyonm.github.io. La den inn i samme div som kategori
+      <p class="post-entry-tags"><i class="fa fa-tags"></i> {% for tag in page.tags %}<a href="{{ site.url }}/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %} &bull; {% endunless %}{% endfor %}</p>
+      {% endcomment %}
   {{ content }}
 </div>
 
